TASK-3: Add basic UI and API test and some polishing

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ i.e., credit, debit, and charge cards">
         <!-- RU: Web-страница c минимальным пользовательским интерфейсом: полем для ввода номера банковской карты и кнопкой отправки запроса -->
         <form method="GET", action="/identify">
             <input type="number" id="BIN" name="BIN" min="0" placeholder="Enter BIN"><br><br>
-            <input type="submit" value="IDENTIFY">
+            <input type="submit" id="IDENTIFY" value="IDENTIFY">
         <!-- SRS-5 -->
         <!-- EN: Clicking the button sends a request to the server -->
         <!-- RU: Нажатие на кнопку приводит к отправке запроса на сервер -->
